--- a/src/Control/Control.csproj
+++ b/src/Control/Control.csproj
@@ -1,7 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -9,18 +8,20 @@
         <InvariantGlobalization>true</InvariantGlobalization>
         <SelfContained>true</SelfContained>
     </PropertyGroup>
-    
+
     <ItemGroup>
-        <Using Include="Protocol" />
+        <Using Include="Protocol"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Protocol\Protocol.csproj" />
+        <ProjectReference Include="..\Protocol\Protocol.csproj"/>
     </ItemGroup>
-    
+
     <ItemGroup>
-      <PackageReference Include="Docker.DotNet" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+        <PackageReference Include="Docker.DotNet"/>
+        <PackageReference Include="Google.Protobuf"/>
+        <PackageReference Include="Grpc.AspNetCore" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
     </ItemGroup>
-    
+
 </Project>
