--- a/src/Control/Control.csproj
+++ b/src/Control/Control.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <Using Include="Protocol"/>
+        <Using Include="Humanizer"/>        
     </ItemGroup>
 
     <ItemGroup>
@@ -19,6 +20,7 @@
 
     <ItemGroup>
         <PackageReference Include="Docker.DotNet"/>
+        <PackageReference Include="Humanizer.Core" />
         <PackageReference Include="Google.Protobuf"/>
         <PackageReference Include="Grpc.AspNetCore" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
