--- a/src/Control/appsettings.json
+++ b/src/Control/appsettings.json
@@ -1,9 +1,11 @@
 {
     "Logging": {
         "LogLevel": {
-            "Default": "Debug",
+            "Default": "Information",
             "System": "Information",
-            "Microsoft": "Information"
+            "Microsoft": "Information",
+            "Grpc": "Information",
+            "Control": "Debug"
         }
     }
 }
