--- a/src/ControlPlane/ControlPlane.csproj
+++ b/src/ControlPlane/ControlPlane.csproj
@@ -4,26 +4,23 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PublishAot>true</PublishAot>
-        <InvariantGlobalization>true</InvariantGlobalization>
-        <SelfContained>true</SelfContained>
     </PropertyGroup>
 
     <ItemGroup>
         <Using Include="Protocol"/>
-        <Using Include="Humanizer"/>        
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\Protocol\Protocol.csproj"/>
+        <Using Include="Humanizer"/>
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Docker.DotNet"/>
-        <PackageReference Include="Humanizer.Core" />
+        <PackageReference Include="Humanizer.Core"/>
         <PackageReference Include="Google.Protobuf"/>
-        <PackageReference Include="Grpc.AspNetCore" />
+        <PackageReference Include="Grpc.AspNetCore"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\CommunicationsProtocol\CommunicationsProtocol.csproj"/>
     </ItemGroup>
 
 </Project>
