--- a/src/Agent/Agent.csproj
+++ b/src/Agent/Agent.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CommunicationsProtocol\CommunicationsProtocol.csproj"/>
+        <ProjectReference Include="..\Protocol\Protocol.csproj" />
     </ItemGroup>
 
 </Project>
