--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,3 +26,9 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      
+    - name: Publish macOS ARM64
+      run: dotnet publish src/Agent/Agent.csproj -c Release -r osx-arm64 --self-contained true -o artifacts/osx-arm64
+  
+    - name: Publish macOS x64 (Intel)
+      run: dotnet publish src/Agent/Agent.csproj -c Release -r osx-x64 --self-contained true -o artifacts/osx-x64
