--- a/src/ControlPlane/ControlPlane.csproj
+++ b/src/ControlPlane/ControlPlane.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CommunicationsProtocol\CommunicationsProtocol.csproj"/>
+        <ProjectReference Include="..\Protocol\Protocol.csproj" />
     </ItemGroup>
 
 </Project>
