--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,3 +32,15 @@ jobs:
   
     - name: Publish macOS x64 (Intel)
       run: dotnet publish src/Agent/Agent.csproj -c Release -r osx-x64 --self-contained true -o artifacts/osx-x64
+      
+    - name: Upload ARM64 artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: agent-osx-arm64
+        path: artifacts/osx-arm64
+  
+    - name: Upload x64 artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: agent-osx-x64
+        path: artifacts/osx-x64
